<resources>
    <string name="app_name">Course_link</string>
    <string-array name="club_categories">
        <item>Academic</item>
        <item>Sports</item>
        <item>Cultural</item>
        <item>Religious</item>
        <item>Arts &amp; Music</item>
        <item>Technology</item>
    </string-array>

    <string-array name="campus_locations">
        <item>TRU Campus Activity Centre</item>
        <item>TRU Library</item>
        <item>Old Main</item>
        <item>Science Building</item>
        <item>Campus Commons</item>
        <item>Student Union Building</item>
        <item>Gymnasium</item>
        <item>Hillside Stadium</item>
        <item>TRU Old Gymnasium</item>
    </string-array>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- strings added for activity_detail.xml -->
    <string name="club_name_default">Art Club</string>
    <string name="club_category">Category</string>
    <string name="club_description">This club is a welcoming space for creatives who want to express themselves through art.\n\nWhether you’re a painter, writer, designer, or simply someone who loves to create, this is a place to connect with others.\n\nOur goal is to inspire, collaborate, and grow together as artists, while celebrating all forms of creative expression.</string>
    <string name="edit_club">Edit Club</string>
    <string name="header_clublink">Club Link</string>
    <string name="back_image_desc">Back</string>
</resources>