<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".DetailActivity">


    <ImageView
        android:id="@+id/backImage"
        android:layout_width="49dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/left"
        android:contentDescription="@string/back_image_desc" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="88dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/message"
        android:contentDescription="@null" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <!-- ScrollView must not use ConstraintLayout constraints when its parent is a CardView/FrameLayout.
             Use match_parent and let the inner child determine scrolling size. -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imagedclubs"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/image_1"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/clubNameD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_flex"
                    android:text="@string/club_name_default"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imagedclubs" />


                <TextView
                    android:id="@+id/categoryD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/club_category"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/clubNameD"
                    app:layout_constraintTop_toBottomOf="@+id/imagedclubs" />

                <TextView
                    android:id="@+id/descriptionClubD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/club_description"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clubNameD" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditClub"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#CC0058B6"
                    android:text="@string/edit_club"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.392"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionClubD"
                    app:layout_constraintVertical_bias="0.907"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header_clublink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:itemIconSize="26dp"
        app:itemIconTint="@color/black"
        app:itemRippleColor="#1C4E80"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_nav" />




</androidx.constraintlayout.widget.ConstraintLayout>